--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,25 +6,25 @@
     android:id="@+id/navigation">
 
     <fragment
-        android:name="com.example.feetmonitor.ConnectionFragment"
+        android:name="dashkudov.feetmonitor.presentation.fragments.ConnectionFragment"
         android:label="Connection"
         android:id="@+id/fragment_connection">
     </fragment>
 
     <fragment
-        android:name="com.example.feetmonitor.HomeFragment"
+        android:name="dashkudov.feetmonitor.presentation.fragments.HomeFragment"
         android:label="Home"
         android:id="@+id/fragment_home">
     </fragment>
 
     <fragment
-        android:name="com.example.feetmonitor.StatsFragment"
+        android:name="dashkudov.feetmonitor.presentation.fragments.StatsFragment"
         android:label="Statistics"
         android:id="@+id/fragment_stats">
     </fragment>
 
     <fragment
-        android:name="com.example.feetmonitor.SettingsFragment"
+        android:name="dashkudov.feetmonitor.presentation.fragments.SettingsFragment"
         android:label="Settings"
         android:id="@+id/fragment_settings">
     </fragment>
