--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@id/fragment_home"
-    android:id="@+id/navigation">
+    android:id="@+id/main_navigation">
 
     <fragment
+        tools:layout="@layout/fragment_connection"
         android:name="dashkudov.feetmonitor.presentation.fragments.ConnectionFragment"
         android:label="Connection"
         android:id="@+id/fragment_connection">
     </fragment>
 
     <fragment
+        tools:layout="@layout/fragment_home"
         android:name="dashkudov.feetmonitor.presentation.fragments.HomeFragment"
         android:label="Home"
         android:id="@+id/fragment_home">
     </fragment>
 
     <fragment
+        tools:layout="@layout/fragment_stats"
         android:name="dashkudov.feetmonitor.presentation.fragments.StatsFragment"
         android:label="Statistics"
         android:id="@+id/fragment_stats">
     </fragment>
 
     <fragment
+        tools:layout="@layout/fragment_settings"
         android:name="dashkudov.feetmonitor.presentation.fragments.SettingsFragment"
         android:label="Settings"
         android:id="@+id/fragment_settings">
