--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,14 @@
     tools:context="dashkudov.feetmonitor.presentation.MainActivity">
 
     <fragment
-        android:tag="fragment_host"
         android:id="@+id/fragment_host"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/navigation"
+        app:navGraph="@navigation/main_navigation"
         app:defaultNavHost="true"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_above="@+id/nav_view"
         android:layout_alignParentTop="true">
     </fragment>
@@ -25,9 +24,9 @@
         android:id="@+id/nav_view"
         app:layout_constraintBottom_toBottomOf="parent"
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-        app:menu="@menu/navigation_menu"
+        app:menu="@menu/main_menu"
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="54dp">
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
