--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,18 +5,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:icon="@drawable/icon_connection"
-        android:id="@+id/item_connection"
+        android:id="@+id/fragment_connection"
         android:title="Connection" />
     <item
         android:icon="@drawable/icon_home"
-        android:id="@+id/item_home"
+        android:id="@+id/fragment_home"
         android:title="Home" />
     <item
         android:icon="@drawable/icon_stats"
-        android:id="@+id/item_stats"
+        android:id="@+id/fragment_stats"
         android:title="Statistics" />
     <item
         android:icon="@drawable/icon_settings"
-        android:id="@+id/item_settings"
+        android:id="@+id/fragment_settings"
         android:title="Settings" />
 </menu>
