--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@id/fragment_home"
-    android:id="@+id/main_navigation">
+    android:id="@+id/navigation">
 
     <fragment
         tools:layout="@layout/fragment_connection"
