--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="dashkudov.feetmonitor.presentation.fragments.StatsFragment">
+    tools:context="dashkudov.feetmonitor.presentation.fragments.stats.StatsFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/chart"
                 app:layout_constraintStart_toStartOf="parent"
