--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     tools:context="dashkudov.feetmonitor.presentation.MainActivity">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        app:trackColor="@color/purple"
+        app:indicatorColor="@color/white"
+        android:indeterminate="true"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+    </com.google.android.material.progressindicator.LinearProgressIndicator>
+
     <fragment
         android:id="@+id/fragment_host"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
