--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="black">#000000</color>
     <color name="secondary_black">#1B1B1B</color>
     <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
+    <color name="purple">#970097</color>
 </resources>
