--- a/app/src/main/res/layout/view_empty_cover.xml
+++ b/app/src/main/res/layout/view_empty_cover.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView
-    android:layout_marginBottom="-10dp"
-    android:layout_weight="1"
+<androidx.appcompat.widget.AppCompatTextView android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"> mb
-</androidx.appcompat.widget.AppCompatTextView>
+    xmlns:android="http://schemas.android.com/apk/res/android"></androidx.appcompat.widget.AppCompatTextView>
