--- a/app/src/main/res/layout/view_statistics.xml
+++ b/app/src/main/res/layout/view_statistics.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_constraintTop_toBottomOf="@+id/header_statistics"
     app:layout_constraintBottom_toBottomOf="parent"
+    android:paddingBottom="10dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
