--- a/app/src/main/res/layout/view_statistics_criteria.xml
+++ b/app/src/main/res/layout/view_statistics_criteria.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView
-    android:layout_weight="1"
+<androidx.appcompat.widget.AppCompatTextView android:layout_weight="1"
     android:minHeight="42dp"
     android:layout_gravity="center"
     android:gravity="center"
     android:id="@+id/tv_statistics_value"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:textSize="@dimen/text_size"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-</androidx.appcompat.widget.AppCompatTextView>
+    android:layout_height="wrap_content"
+    android:textSize="@dimen/another_text_size"
+    xmlns:android="http://schemas.android.com/apk/res/android"></androidx.appcompat.widget.AppCompatTextView>
