--- a/app/src/main/res/layout/view_statistics_value.xml
+++ b/app/src/main/res/layout/view_statistics_value.xml
@@ -2,11 +2,12 @@
 
 <androidx.appcompat.widget.AppCompatTextView
     android:layout_weight="1"
+    android:layout_height="wrap_content"
     android:id="@+id/tv_statistics_value"
     android:layout_gravity="center"
     android:gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:minHeight="42dp"
     android:textColor="@color/secondary_black"
     android:textSize="@dimen/text_size"
     xmlns:android="http://schemas.android.com/apk/res/android">
