--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="text_size">14sp</dimen>
     <dimen name="small_text_size">12sp</dimen>
-    <dimen name="big_text_size">17sp</dimen>
+    <dimen name="big_text_size">16sp</dimen>
+    <dimen name="another_text_size">13sp</dimen>
 </resources>
