--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
             android:icon="@drawable/icon_home"
             android:id="@+id/fragment_home"
-            android:title="@string/home" />
+            android:title="Главная" />
         <item
             android:icon="@drawable/icon_statistics"
             android:id="@+id/fragment_statistics"
-            android:title="@string/statistics" />
+            android:title="Статистика" />
         <item
             android:icon="@drawable/icon_settings"
             android:id="@+id/fragment_settings"
-            android:title="@string/settings" />
+            android:title="Настройки" />
     </group>
 
 </menu>
