--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -15,18 +15,49 @@
 
             <include layout="@layout/view_chart_header" />
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/chart"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/chart_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="?android:selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/bright_white"
+                app:cardCornerRadius="24dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_header_chart"
                 app:layout_constraintDimensionRatio="3:2"
-                android:layout_marginHorizontal="12dp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp" />
+                app:cardElevation="10dp"
+                app:cardUseCompatPadding="true">
 
-            <include layout="@layout/view_statistics_header"/>
-            <include layout="@layout/view_statistics"/>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="12dp" />
+                </FrameLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <include layout="@layout/view_statistics_header" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/bright_white"
+                app:cardCornerRadius="24dp"
+                app:cardElevation="10dp"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintTop_toBottomOf="@+id/header_statistics">
+
+                <include layout="@layout/view_statistics" />
+            </androidx.cardview.widget.CardView>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
