--- a/app/src/main/res/layout/view_statistics.xml
+++ b/app/src/main/res/layout/view_statistics.xml
@@ -2,14 +2,15 @@
 <androidx.appcompat.widget.LinearLayoutCompat
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintTop_toBottomOf="@+id/header_statistics"
     app:layout_constraintBottom_toBottomOf="parent"
     android:paddingBottom="10dp"
+    android:layout_marginTop="12dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_marginStart="6dp"
         android:id="@+id/container_statistics_today"
         android:orientation="vertical"
         android:layout_weight="1"
@@ -27,7 +28,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/container_criteria_list"
         android:orientation="vertical"
-        android:layout_weight="1"
+        android:layout_weight="1.2"
         android:layout_width="0dp"
         android:layout_height="match_parent">
         <!-- Have to be empty -->
@@ -42,6 +43,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_marginEnd="6dp"
         android:id="@+id/container_statistics_all_time"
         android:orientation="vertical"
         android:layout_weight="1"
