--- a/app/src/main/res/layout/view_statistics_all_time_header.xml
+++ b/app/src/main/res/layout/view_statistics_all_time_header.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatTextView
+    android:fontFamily="@font/montserrat_bold"
     android:layout_weight="1"
     android:id="@+id/header_statistics_all_time"
     android:gravity="center"
     android:lines="1"
+    android:minHeight="@dimen/headers_min_height"
     android:text="За все время"
     android:textStyle="bold"
     android:textColor="@color/secondary_black"
