--- a/app/src/main/res/layout/view_statistics_header.xml
+++ b/app/src/main/res/layout/view_statistics_header.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.appcompat.widget.AppCompatTextView
-    android:layout_marginTop="20dp"
-    app:layout_constraintTop_toBottomOf="@+id/chart"
+<androidx.appcompat.widget.AppCompatTextView android:layout_marginTop="6dp"
+    android:fontFamily="@font/montserrat_extra_bold"
+    android:text="Средняя статистика"
     android:id="@+id/header_statistics"
     android:gravity="center"
-    android:text="Статистика"
+    app:layout_constraintTop_toBottomOf="@+id/chart_container"
     android:textStyle="bold"
     android:textColor="@color/secondary_black"
     android:textSize="@dimen/big_text_size"
