--- a/app/src/main/res/layout/view_statistics_value.xml
+++ b/app/src/main/res/layout/view_statistics_value.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.appcompat.widget.AppCompatTextView
+    android:fontFamily="@font/montserrat_medium"
     android:layout_weight="1"
     android:layout_height="wrap_content"
     android:id="@+id/tv_statistics_value"
     android:layout_gravity="center"
     android:gravity="center"
     android:layout_width="match_parent"
-    android:minHeight="42dp"
+    android:minHeight="@dimen/values_min_height"
     android:textColor="@color/secondary_black"
     android:textSize="@dimen/text_size"
     xmlns:android="http://schemas.android.com/apk/res/android">
