--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <dimen name="text_size">14sp</dimen>
     <dimen name="small_text_size">12sp</dimen>
     <dimen name="big_text_size">16sp</dimen>
+    <dimen name="all_divider_height">1px</dimen>
     <dimen name="another_text_size">13sp</dimen>
+    <dimen name="values_min_height">56dp</dimen>
+    <dimen name="headers_min_height">32dp</dimen>
 </resources>
