--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FeetMonitor" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FeetMonitor" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/main_orange</item>
         <item name="colorPrimaryVariant">@color/main_orange</item>
@@ -12,6 +12,35 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:imeOptions"></item>
     </style>
+
+    <style name="Theme.FeetMonitor.Fullscreen" parent="Theme.FeetMonitor">
+        <item name="android:windowFullscreen">false</item>
+    </style>
+
+    <style name="SwitchStyle" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">#00B4E6</item>
+    </style>
+
+    <style name="AppTheme.Button.Settings" parent="Base.TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:paddingTop">9dp</item>
+        <item name="android:paddingBottom">9dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:gravity">start|center_vertical</item>
+    </style>
+
+    <style name="AppTheme.TextAppearance.Settings" parent="Base.TextAppearance.AppCompat.Medium">
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginBottom">9dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#838383</item>
+        <item name="android:letterSpacing">0.1</item>
+    </style>
+
 </resources>
